# supaconify

./: .gitattributes  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  test.yml
supaconify/: _version.py  cli.py  client.py
