[metadata]
name = supaconify
description = Send notification from supercomputer
author = flat35hd99
url = https://github.com/flat35hd99/supaconify
platforms = any

[options]
install_requires =
    click
    slack_sdk

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = supaconify/_version.py
versionfile_build = supaconify/_version.py
tag_prefix = v
parentdir_prefix = supaconify-

[flake8]
max-line-length = 88
extend-ignore = E203
